<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/example_greeting"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:textColor="@color/primary_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_study_math_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/study_math_now"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toStartOf="@id/tv_greeting"
        app:layout_constraintEnd_toEndOf="@id/tv_greeting"/>

    <FrameLayout
        android:id="@+id/holder_progress_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_study_math_now"
        app:layout_constraintEnd_toEndOf="parent">
        <include
            android:id="@+id/include_progress_report"
            layout="@layout/include_progress_report"/>
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/holder_material"
        android:layout_width="150dp"
        android:layout_height="134dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/soft_rose_red"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@id/holder_progress_report"
        app:layout_constraintTop_toBottomOf="@id/holder_progress_report">
        <TextView
            android:id="@+id/tv_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/study"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingHorizontal="16dp"
            android:drawablePadding="18dp"
            app:drawableTopCompat="@drawable/ic_study" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/holder_quiz"
        android:layout_width="150dp"
        android:layout_height="134dp"
        android:backgroundTint="@color/soft_rose_red"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/holder_progress_report"
        app:layout_constraintTop_toTopOf="@id/holder_material"
        app:layout_constraintBottom_toBottomOf="@id/holder_material">
        <TextView
            android:id="@+id/tv_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingHorizontal="16dp"
            android:drawablePadding="18dp"
            app:drawableTopCompat="@drawable/ic_game" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_last_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/last_studied"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@id/tv_greeting"
        app:layout_constraintTop_toBottomOf="@id/holder_material"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_last_material"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_last_material"
        app:layout_constraintTop_toBottomOf="@id/tv_last_material"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>