<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <FrameLayout
            android:id="@+id/profile_header_container"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:translationZ="-2dp"
            android:background="@drawable/card_view_profile"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_header_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_leaderboard_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_header_profile"
            app:layout_constraintBottom_toBottomOf="@id/tv_header_profile"/>

        <FrameLayout
            android:id="@+id/student_profiler_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-106dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintTop_toBottomOf="@id/profile_header_container">
            <include
                android:id="@+id/include_student_profile_card"
                layout="@layout/include_student_profile_card"
                app:layout_constraintTop_toBottomOf="@id/profile_header_container"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_check_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/check_in"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/student_profiler_card_container"/>

        <TextView
            android:id="@+id/tv_check_in_count_greet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:textSize="10sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_check_in"
            app:layout_constraintStart_toStartOf="@id/tv_check_in"
            android:text="Selamat, kamu telah berhasil check in 3 hari beruntun"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_container_check_in_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_check_in_count_greet">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_check_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_list_check_in"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_other_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/other_information"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/cv_container_check_in_list"
            app:layout_constraintTop_toBottomOf="@id/cv_container_check_in_list"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_profile_add_ons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/student_profiler_card_container"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/student_profiler_card_container"
            app:layout_constraintTop_toBottomOf="@id/tv_other_information"
            tools:listitem="@layout/item_list_profile_add_ons" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>